--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "date-fns-tz": "^3.2.0",
     "feed": "^4.2.2",
     "fs-mdx": "0.3.3",
-    "fumadocs-core": "15.0.3",
-    "fumadocs-ui": "14.7.0",
+    "fumadocs-core": "15.0.11",
+    "fumadocs-mdx": "^11.5.6",
+    "fumadocs-ui": "15.0.11",
     "gray-matter": "^4.0.3",
     "i18next": "^23.16.2",
     "i18next-resources-to-backend": "^1.2.1",
@@ -57,7 +58,8 @@
     "styled-components": "^6.1.13",
     "swr": "^2.2.5",
     "tinyduration": "^3.3.1",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.9",
