--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@fullhuman/postcss-purgecss": "^6.0.0",
     "@next/bundle-analyzer": "15.0.1",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4.0.8",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.7.9",
     "@types/styled-components": "^5.1.34",
@@ -81,7 +82,7 @@
     "postcss": "^8.4.47",
     "postcss-preset-env": "^10.0.7",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.0.8",
     "typescript": "^5.6.3"
   },
   "scripts": {
