--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website",
+  "name": "web",
   "description": "The solana.com website",
   "version": "3.0.0",
   "author": "Solana Maintainers",
