--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^19.0.0",
     "fumadocs-ui": "15.0.12",
     "fumadocs-core": "15.0.12",
-    "fumadocs-mdx": "11.5.6"
+    "fumadocs-mdx": "11.5.6",
+    "@solana-com/shared": "1.0.0"
   },
   "devDependencies": {
     "@types/node": "22.13.4",
